# vibepod-cli

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  runtime-integration.yml
docs/: cli-reference.md  configuration.md  development.md  index.md  llm.md  podman.md  quickstart.md
docs/agents/: index.md
docs/skills/: authoring.md  index.md  locators.md
scripts/: check_default_images.py  cleanup_runtime_scenario.sh  prepare_runtime_scenario.sh
src/vibepod/: __init__.py  cli.py  compat.py  constants.py
src/vibepod/commands/: __init__.py  attach.py  config.py  doctor.py  list_cmd.py  logs.py  proxy.py  run.py  skills.py  stop.py  task.py  update.py
src/vibepod/core/: __init__.py  agents.py  allowed_dirs.py  config.py  docker.py  launch.py  runtime.py  session_logger.py  skills_engine.py  tasks.py
src/vibepod/utils/: console.py
tests/: test_agents.py  test_attach.py  test_claude_token.py  test_cli.py  test_config.py  test_constants.py  test_docker.py  test_docker_manager.py  test_doctor.py  test_list.py  test_logs.py  test_proxy_permissions.py  test_run.py  test_runtime.py  test_session_logger.py  test_skills.py  test_skills_engine_driver.py  test_stop.py  test_task_cmd.py  test_tasks.py  test_version_integration.py
tests/integration/: conftest.py  test_runtime_smoke.py
